# hydrai

./: OVERVIEW.md  TRUST.md
Intelligence/: OVERVIEW.md  README.md  SPEC.md  pyproject.toml
Intelligence/Configs/: config.example.json
Intelligence/Deploy/launchd/: com.hydrai.intelligence.plist.example
Intelligence/Deploy/systemd/: hydrai-intelligence.service.example
Intelligence/src/intelligence/: __init__.py  adapters.py  auth.py  cli.py  concurrency.py  config.py  embedding.py  server.py
Intelligence/tests/: test_adapters.py  test_auth.py  test_config.py  test_embedding.py  test_server.py
Memory/: MANUAL.md  OVERVIEW.md  README.md  SPEC.md  pyproject.toml
Memory/Configs/: config.example.json
Memory/Deploy/launchd/: com.hydrai.memory.plist.example
Memory/Deploy/systemd/: hydrai-memory.service.example
Memory/src/hydrai_memory/: MANUAL.md  __init__.py  __main__.py  auth.py  brain_bootstrap.py  cli.py  config.py  policy.py  service.py
Memory/src/hydrai_memory/contexttree/: __init__.py  auth.py  core.py  detect.py  embedder.py  llm.py  maintain.py  prompt_config.py  search.py  summary.py  validate.py
Memory/src/hydrai_memory/identity_state/: __init__.py  core.py  manager.py
Memory/src/hydrai_memory/resources/: __init__.py  core.py  (+1 more)
Memory/tests/: test_contexttree_integration.py  test_contexttree_unittest.py  test_identity_manager_unittest.py  test_identity_state_unittest.py  test_resources_unittest.py  test_service_unittest.py  test_session_manager_unittest.py  test_sessionbook_unittest.py  test_skill_manager_unittest.py  test_skillset_unittest.py
Toolbox/: OVERVIEW.md  README.md  SPEC.md  pyproject.toml
Toolbox/Configs/: config.example.json
Toolbox/Deploy/launchd/: com.hydrai.toolbox.plist.example
Toolbox/Deploy/systemd/: hydrai-toolbox.service.example
Toolbox/src/hydrai_toolbox/: __init__.py  __main__.py  auth.py  cli.py  config.py  gmail_auth.py  providers.py  service.py
Toolbox/tests/: test_config.py  test_live_providers.py  test_providers.py  test_service.py
(+19 files in other folders)
