[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrai-intelligence"
version = "0.1.0"
description = "Hydrai Intelligence model-serving middleware"
readme = "OVERVIEW.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "sentence-transformers>=3.0.0"
]

[project.scripts]
hydrai-intelligence = "intelligence.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

