[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrai-memory"
version = "0.1.0"
description = "Hydrai durable state service internals"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "charset-normalizer>=3.0",
    "numpy>=1.26.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
