[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrai-toolbox"
version = "0.1.0"
description = "Hydrai external tools bridge service"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
hydrai-toolbox = "hydrai_toolbox.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
